--- a/EnjoyEat/EnjoyEat/Views/OrderTogo/Order.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/OrderTogo/Order.cshtml
@@ -286,10 +286,13 @@
 
                 //利用filter方法將符合目前所選擇子分類的對應產品取出
                 filteredProducts() {
+                    let _this = this;
+                    let filterArr = _this.product;
                     if (this.selectedSubCategoryId) {
-                        return this.products.filter(product => product.subCategoryId === this.selectedSubCategoryId);
+                        //return this.products.filter(product => product.subCategoryId === this.selectedSubCategoryId);
+                        filterArr = _this.products.filter(product => product.subCategoryId === this.selectedSubCategoryId);
                     }
-                    return [];
+                    return filterArr;
                 },
 
                 //計算購物車內容的總餐點數量
