--- a/EnjoyEat/EnjoyEat/Views/Shared/_Layout.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Shared/_Layout.cshtml
@@ -97,10 +97,10 @@
 						<div class="footer-info">
 							<h3>享食 Enjoy Eat</h3>
 							<p>
-								新北市 中和區 , <br>
-								灝文家 <br><br>
-								<strong>Phone:</strong> 02 1234-6789<br>
-								<strong>Email:</strong> enjoyeat@example.com<br>
+								100台北市中正區<br>
+								青島東路、紹興南街口 <br><br>
+								<strong>Phone:</strong> 02 5589 55488<br>
+								<strong>Email:</strong> thm101team66@gmail.com<br>
 							</p>
 						</div>
 					</div>
