--- a/EnjoyEat/EnjoyEat/wwwroot/css/Reservations.css
+++ b/EnjoyEat/EnjoyEat/wwwroot/css/Reservations.css
@@ -172,11 +172,11 @@ textarea {
     background-color: #bab3a6;
     margin-top: 10px;
     margin-bottom: 10px;
-    height: 250px;
+    height: 100%;
     width: 50%;
     margin: auto;
     border-radius: 50px;
-    padding:20px;
+    padding: 20px;
 }
 
 #bookedInfornations {
@@ -237,6 +237,9 @@ textarea {
     border-color: #625b4b;
     color: #aaa;
     height: 44px;
+}
+#contactUsForm input::placeholder, #contactUsForm textarea::placeholder, #contactUsForm select::placeholder {
+    color: #aaa;
 }
 
 #submitbtn {
