--- a/EnjoyEat/EnjoyEat/Areas/backend/Views/Shared/_Layout.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/backend/Views/Shared/_Layout.cshtml
@@ -88,7 +88,7 @@
 							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa-solid fa-people-arrows me-2"></i>會員相關</a>
 							<div class="dropdown-menu bg-transparent border-0">
 								<a asp-area="backend" asp-controller="MemberManagement" asp-action="Index" class="nav-link scrollto">會員管理</a>
-								<a href="element.html" class="nav-link scrollto">訂單管理</a>
+								<a asp-area="backend" asp-controller="Order" asp-action="Index" class="nav-link scrollto">訂單管理</a>
 								<a asp-area="backend" asp-controller="ReservationManagement" asp-action="Index" class="nav-link scrollto">訂位管理</a>
 							</div>
 						}
