--- a/EnjoyEat/EnjoyEat/Views/Menu/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Menu/Index.cshtml
@@ -1,207 +1,206 @@
-
 ﻿@using System.Composition;
 @{
-    Layout = "_Layout";
+	Layout = "_Layout";
 }
 @model IEnumerable<EnjoyEat.Models.ViewModel.MenuViewModel>
 @section Styles {
-    <link href="~/css/menustyle.css" rel="stylesheet" />
+	<link href="~/css/menustyle.css" rel="stylesheet" />
 }
 
 <!-- ======= Menu Section ======= -->
 <div id="app">
-    <div class="section-title">
-        <h2>菜單精選</h2>
-        <p>主廚推薦 TOP <span style="font-size:50px">10</span> !</p>
-    </div>
-    <section id="top-ten" class="top-ten section-bg">
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                            aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                            aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <div class="row">
-                            <div class="toptenimg col-md-8">
-                                <img src="/img/specials-1.png" class=" d-block" alt="Image 1">
-                            </div>
-                        <div class="toptenitem col-md-4">
-                                <h3>推薦餐點 TOP<span style="font-size:35px">  1</span></h3><br>
-                                <h4>薑絲嚕嚕咪</h4>
-                                <p>$400</p><br>
-                                <div class="carousel-caption">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="row">
-                            <div class="toptenimg col-md-8">
-                                <img src="/img/specials-2.png" class="d-block" alt="Image 2">
-                            </div>
-                        <div class="toptenitem col-md-4">
-                                <h3>推薦餐點 TOP<span style="font-size:35px">  2</span></h3><br>
-                                <h4>雨傘節沙拉</h4>
-                                <p>$150</p>
-                                <div class="carousel-caption">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="row">
-                            <div class="toptenimg col-md-8">
-                                <img src="/img/specials-3.png" class="d-block" alt="Image 3">
-                            </div>
-                            <div class="toptenitem col-md-4">
-                                <h3>推薦餐點 TOP<span style="font-size:35px">  3</span></h3><br>
-                                <h3>膽汁牛肉麵</h3>
-                                <p>$250</p>
-                                <div class="carousel-caption">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                        data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                        data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-    </section>
-    <div class="section-title">
-        <h2>菜單</h2>
-        <p>歡迎查看美味的菜單</p>
-    </div>
-    <!--篩選區-->
-    <section id="menuItem" class="menu section-bg">
-        <!--類別選擇列-->
-        <div class="row" data-aos="fade-up" data-aos-delay="100">
-            <div class="col-lg-12 d-flex justify-content-center">
-                <ul id="menu-flters">
-                    @*<li class="filter-active" v-on:click="selectedCategoryId = this.selectedCategoryId">全部</li>*@
-                    <li v-for="category in categories"
-                        :key="category.categoryId"
-                        v-if="categories"
-                        :value="category.categoryId"
-                        :class="{ 'filter-active': selectedCategoryId === category.categoryId }"
-                        v-on:click="selectedCategoryId = category.categoryId">
-                        {{category.categoryName}}
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <!--子類別選擇列-->
-        <div class="row" data-aos="fade-up" data-aos-delay="100">
-            <div class="col-lg-12 d-flex justify-content-center">
-                <ul id="menu-flters">
-                    <li v-for="subCategory in filteredSubCategories"
-                        :key="subCategory.subCategoryId"
-                        :value="subCategory.subCategoryId"
-                        :class="{ 'sub-filter-active': selectedSubCategoryId === subCategory.subCategoryId }"
-                        v-on:click="selectedSubCategoryId = subCategory.subCategoryId">
-                        {{subCategory.subCategoriesName}}
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
-    <!--菜單區-->
-    <section id="menu" class="menu section-bg">
-        <div class="menuDetail">
-            <div class="row" data-aos="fade-up" data-aos-delay="100">
-                @*<div v-for="t in temp" :class="{'col-lg-4': true, 'menu-item': true, [t.categoryName]: true}">*@
-                <div v-for="t in filteredProducts" :key="t.productId" class="col-lg-4 menu-item">
-                    <img :src="baseUrl + t.mealImg" class="menu-img" alt="">
-                    <div class="menu-content">
-                        <a href="#">{{t.productName}}</a><span>${{t.unitPrice}}</span>
-                    </div>
-                    <div class="menu-ingredients">
-                        {{t.description}}
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+	<div class="section-title">
+		<h2>菜單精選</h2>
+		<p>主廚推薦 TOP <span style="font-size:50px">10</span> !</p>
+	</div>
+	<section id="top-ten" class="top-ten section-bg">
+		<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+			<div class="carousel-indicators">
+				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+						aria-current="true" aria-label="Slide 1"></button>
+				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+						aria-label="Slide 2"></button>
+				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+						aria-label="Slide 3"></button>
+			</div>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<div class="row">
+						<div class="toptenimg col-md-8">
+							<img src="~/img/food/meat3.jpg" class=" d-block" alt="Image 1">
+						</div>
+						<div class="toptenitem col-md-4">
+							<h3>推薦餐點 TOP<span style="font-size:35px">  1</span></h3><br>
+							<h4>通心菲力</h4>
+							<p>$400</p><br>
+							<div class="carousel-caption">
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="carousel-item">
+					<div class="row">
+						<div class="toptenimg col-md-8">
+							<img src="~/img/food/risotto3.jpg" class="d-block" alt="Image 2">
+						</div>
+						<div class="toptenitem col-md-4">
+							<h3>推薦餐點 TOP<span style="font-size:35px">  2</span></h3><br>
+							<h4>咖哩龍蝦燉飯</h4>
+							<p>$450</p>
+							<div class="carousel-caption">
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="carousel-item">
+					<div class="row">
+						<div class="toptenimg col-md-8">
+							<img src="~/img/food/pasta1.jpg" class="d-block" alt="Image 3">
+						</div>
+						<div class="toptenitem col-md-4">
+							<h3>推薦餐點 TOP<span style="font-size:35px">  3</span></h3><br>
+							<h3>辣炒蛤蠣義大利麵</h3>
+							<p>$350</p>
+							<div class="carousel-caption">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+					data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+					data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</button>
+		</div>
+	</section>
+	<div class="section-title">
+		<h2>菜單</h2>
+		<p>歡迎查看美味的菜單</p>
+	</div>
+	<!--篩選區-->
+	<section id="menuItem" class="menu section-bg">
+		<!--類別選擇列-->
+		<div class="row" data-aos="fade-up" data-aos-delay="100">
+			<div class="col-lg-12 d-flex justify-content-center">
+				<ul id="menu-flters">
+					@*<li class="filter-active" v-on:click="selectedCategoryId = this.selectedCategoryId">全部</li>*@
+					<li v-for="category in categories"
+						:key="category.categoryId"
+						v-if="categories"
+						:value="category.categoryId"
+						:class="{ 'filter-active': selectedCategoryId === category.categoryId }"
+						v-on:click="selectedCategoryId = category.categoryId">
+						{{category.categoryName}}
+					</li>
+				</ul>
+			</div>
+		</div>
+		<!--子類別選擇列-->
+		<div class="row" data-aos="fade-up" data-aos-delay="100">
+			<div class="col-lg-12 d-flex justify-content-center">
+				<ul id="menu-flters">
+					<li v-for="subCategory in filteredSubCategories"
+						:key="subCategory.subCategoryId"
+						:value="subCategory.subCategoryId"
+						:class="{ 'sub-filter-active': selectedSubCategoryId === subCategory.subCategoryId }"
+						v-on:click="selectedSubCategoryId = subCategory.subCategoryId">
+						{{subCategory.subCategoriesName}}
+					</li>
+				</ul>
+			</div>
+		</div>
+	</section>
+	<!--菜單區-->
+	<section id="menu" class="menu section-bg">
+		<div class="menuDetail">
+			<div class="row" data-aos="fade-up" data-aos-delay="100">
+				@*<div v-for="t in temp" :class="{'col-lg-4': true, 'menu-item': true, [t.categoryName]: true}">*@
+				<div v-for="t in filteredProducts" :key="t.productId" class="col-lg-4 menu-item">
+					<img :src="baseUrl + t.mealImg" class="menu-img" alt="">
+					<div class="menu-content">
+						<a href="#">{{t.productName}}</a><span>${{t.unitPrice}}</span>
+					</div>
+					<div class="menu-ingredients">
+						{{t.description}}
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 </div>
 <!-- ======= Menu Section End ======= -->
 @section Scripts
-    {
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14/dist/vue.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js" integrity="sha512-uMtXmF28A2Ab/JJO2t/vYhlaa/3ahUOgj1Zf27M5rOo8/+fcTUVH0/E0ll68njmjrLqOBjXM3V9NiPFL5ywWPQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script>
+	{
+	<script src="https://cdn.jsdelivr.net/npm/vue@2.7.14/dist/vue.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js" integrity="sha512-uMtXmF28A2Ab/JJO2t/vYhlaa/3ahUOgj1Zf27M5rOo8/+fcTUVH0/E0ll68njmjrLqOBjXM3V9NiPFL5ywWPQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script>
 
-        var app = new Vue({
-            el: '#app',
-            data: {
-                baseUrl: '',
-                temp: [],
-                selectedCategoryId: '',
-                selectedSubCategoryId: '',
-                categories: [],
-            },
-            mounted:
-                function () {
-                    let _this = this;
-                    _this.baseUrl = window.location.origin + '/';
-                    //取得餐點
-                    //axios.get("https://localhost:7071/api/menu/GetMenu")
-                    axios.get('/api/menu/GetMenu')
-                        .then(response => {
-                            _this.temp = response.data; 
-                            //console.log(JSON.stringify(response.data));
-                        });
-                    // 取得類別
-                    axios.get('/api/Order/CategoriesWithSubs')
-                        .then(response => this.categories = response.data)
-                        .catch(err => {
-                            console.error(err);
-                            alert('無法獲取菜單類別，請稍後再試。');
-                        });
-                },
-            computed: {
-                // 利用flatmap+filter方法將符合目前所選擇大分類的對應子分類取出
-                filteredSubCategories(){
-                    let _this = this;
-                    if (_this.selectedCategoryId) {
-                        return _this.categories.flatMap(category => category.subCategories).filter(subCategory => subCategory.categoryId === _this.selectedCategoryId);
-                    }
-                    return [];
-                },
-                // 篩選所選分類餐點
-                filteredProducts() {
-                    let _this = this;
-                    let filterArr = _this.temp;
-                    // 篩選子分類
-                    if (_this.selectedSubCategoryId) {
-                        filterArr = _this.temp.filter(s => s.subCategoryId === _this.selectedSubCategoryId);
-                    }
-                    return filterArr;
-                }
-            },
-            watch: {
-                //監聽大分類的變化，如果大分類被賦予新值，則預設顯示對應的第一個子分類
-                selectedCategoryId: function (newValue) {
-                    let _this = this;
-                    if (newValue) {
-                        let category = _this.categories.find(category => category.categoryId === newValue);
-                        if (category && category.subCategories && category.subCategories.length > 0) {
-                            _this.selectedSubCategoryId = category.subCategories[0].subCategoryId;
-                        }
-                    }
-                },
-            },
-        });
-    </script>
+		var app = new Vue({
+			el: '#app',
+			data: {
+				baseUrl: '',
+				temp: [],
+				selectedCategoryId: '',
+				selectedSubCategoryId: '',
+				categories: [],
+			},
+			mounted:
+				function () {
+					let _this = this;
+					_this.baseUrl = window.location.origin + '/';
+					//取得餐點
+					//axios.get("https://localhost:7071/api/menu/GetMenu")
+					axios.get('/api/menu/GetMenu')
+						.then(response => {
+							_this.temp = response.data;
+							//console.log(JSON.stringify(response.data));
+						});
+					// 取得類別
+					axios.get('/api/Order/CategoriesWithSubs')
+						.then(response => this.categories = response.data)
+						.catch(err => {
+							console.error(err);
+							alert('無法獲取菜單類別，請稍後再試。');
+						});
+				},
+			computed: {
+				// 利用flatmap+filter方法將符合目前所選擇大分類的對應子分類取出
+				filteredSubCategories() {
+					let _this = this;
+					if (_this.selectedCategoryId) {
+						return _this.categories.flatMap(category => category.subCategories).filter(subCategory => subCategory.categoryId === _this.selectedCategoryId);
+					}
+					return [];
+				},
+				// 篩選所選分類餐點
+				filteredProducts() {
+					let _this = this;
+					let filterArr = _this.temp;
+					// 篩選子分類
+					if (_this.selectedSubCategoryId) {
+						filterArr = _this.temp.filter(s => s.subCategoryId === _this.selectedSubCategoryId);
+					}
+					return filterArr;
+				}
+			},
+			watch: {
+				//監聽大分類的變化，如果大分類被賦予新值，則預設顯示對應的第一個子分類
+				selectedCategoryId: function (newValue) {
+					let _this = this;
+					if (newValue) {
+						let category = _this.categories.find(category => category.categoryId === newValue);
+						if (category && category.subCategories && category.subCategories.length > 0) {
+							_this.selectedSubCategoryId = category.subCategories[0].subCategoryId;
+						}
+					}
+				},
+			},
+		});
+	</script>
 }
