--- a/EnjoyEat/EnjoyEat/Areas/backend/Views/Order/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/backend/Views/Order/Index.cshtml
@@ -173,7 +173,26 @@
     <script src="/axios/axios.min.js"></script>
     <script src="~/microsoft/signalr/dist/browser/signalr.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.11.0/index.js"></script>
+    <script type="text/javascript">
+        var connection = new signalR.HubConnectionBuilder()
+            .withUrl("/paymentHub")
+            .build();
 
+        connection.on("PaymentStatusChanged", function (orderId, isPaid) {
+            if (isPaid) {
+                // 如果收到的付款狀態為已付款，則跳出提醒視窗
+                Swal.fire(
+                    '交易狀態提示',
+                    '訂單編號： ' + orderId + '付款成功',
+                    'success'
+                )
+            }
+        });
+
+        connection.start().catch(function (err) {
+            return console.error(err.toString());
+        });
+    </script>
     <script>
         let app = new Vue({
             el: '#app',
