--- a/EnjoyEat/EnjoyEat/Areas/backend/Views/Shared/_Layout.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/backend/Views/Shared/_Layout.cshtml
@@ -97,8 +97,9 @@
 					@if (User.Identity.IsAuthenticated && (User.IsInRole("staff") || User.IsInRole("manager")))
 					{
 						<a asp-area="backend" asp-controller="Product" asp-action="Index" class="nav-item nav-link"><i class="fa fa-th me-2"></i>餐點管理</a>
-						<a asp-area="backend" asp-controller="EmployeeManagement" asp-action="Index" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>員工管理</a>
+						<a asp-area="backend" asp-controller="EmployeeManagement" asp-action="Index" class="nav-item nav-link"><i class="fa fa-solid fa-user me-2"></i>員工管理</a>
 					}
+					<a asp-area="" asp-controller="Home" asp-action="BackendReturn" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>前台首頁</a>
 					<div class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="far fa-file-alt me-2"></i>Login</a>
 						<div class="dropdown-menu bg-transparent border-0">
